add password handling to BE
